Prevent page from overflowing out

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -8,6 +8,7 @@ body {
   color: #555;
   font-size: 10pt;
   line-height: 20px;
+  overflow-x: hidden;
 }
 
 ul { margin: 0px; padding: 0px; list-style: disc outside; }
